fixed overflow for footer

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -193,7 +193,7 @@ body {
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
   /* Place the timelime to the left */
   .timeline {
     &::after {
